<resources>
    <string name="app_name">Gunpla World</string>
    <string name="Open">Gunpla World</string>
    <string name="Close">Gunpla World</string>

    <!-- login register -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="username">Username</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

    <string name="search_hint">search hint</string>

    <!-- Trade Sort Type -->
    <string-array name="trade_sort_array">
        <item>Date Descending</item>
        <item>Date Ascending</item>
        <item>Price Ascending</item>
        <item>Price Descending</item>
    </string-array>
    <string-array name="order_sort_array">
        <item>Date Ascending</item>
        <item>Date Descending</item>
    </string-array>

    <!-- Tab Name -->
    <string-array name="trading_tab">
        <item>All listing</item>
        <item>Buying</item>
        <item>Selling</item>
    </string-array>
    <string-array name="mytrade_tab">
        <item>On Trading</item>
        <item>Pending Approval</item>
        <item>Rejected</item>
    </string-array>


</resources>
